PSFSN-23. add tests for biosequence

--- a/src/signals_notebook/templates/bio_sequence.html
+++ b/src/signals_notebook/templates/bio_sequence.html
@@ -3,7 +3,7 @@
     {% if data['bio_sequence'] %}
     <div class="parent">
         <div class="image-container">
-            <img src="{{ data['bio_sequence'] }}" alt="Image preview" style="width:100%;"/>
+            <img src="{{ data['bio_sequence'] }}" alt="BioSequence preview" style="width:100%;"/>
         </div>
     </div>
     {% endif %}
